--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "url": "https://github.com/O-clock-Sushi/pet-foster-connect-front/issues"
   },
   "homepage": "https://github.com/O-clock-Sushi/pet-foster-connect-front#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "react-router-dom": "^7.5.1"
+  }
 }
