--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "pet-foster-connect-front",
   "version": "1.0.0",
+  "type" : "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,14 @@
   "homepage": "https://github.com/O-clock-Sushi/pet-foster-connect-front#readme",
   "description": "",
   "dependencies": {
-    "react-router-dom": "^7.5.1"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "pg": "^8.15.1",
+    "react-router-dom": "^7.5.1",
+    "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "eslint": "^9.25.1",
+    "prettier": "^3.5.3"
   }
 }
