--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 PORT=3000
 
-PG_URL=postgres://user:mdp@localhost:5432/bdd
+PG_URL=postgres://petfoster:petfoster@localhost:5432/petfoster
 
 VITE_API_BASE_URL=http://localhost:3000/api
 
