--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "node index.js"
+    "dev" : "node index.js",
+    "db:create": "node src/migrations/createTables.js",
+    "db:seed": "node src/migrations/seedDatabase.js",
+    "db:reset": "npm run db:create && npm run db:seed",
+      "db:testDB": "node --env-file=.env src/migrations/testTable.js"
+
   },
   "repository": {
     "type": "git",
