--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev" : "node index.js",
-    "db:create": "node src/migrations/createTables.js",
-    "db:seed": "node src/migrations/seedDatabase.js",
+    "db:create": "node --env-file=.env src/migrations/createTables.js",
+    "db:seed": "node --env-file=.env src/migrations/seedDatabase.js",
     "db:reset": "npm run db:create && npm run db:seed",
       "db:testDB": "node --env-file=.env src/migrations/testTable.js"
 
