--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "pet-foster-connect-front",
   "version": "1.0.0",
-  "type" : "module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "commit": "navi commit",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "node index.js",
+    "dev": "node index.js",
     "db:create": "node --env-file=.env src/migrations/createTables.js",
     "db:seed": "node --env-file=.env src/migrations/seedDatabase.js",
     "db:reset": "npm run db:create && npm run db:seed",
-      "db:testDB": "node --env-file=.env src/migrations/testTable.js"
-
+    "db:testDB": "node --env-file=.env src/migrations/testTable.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "eslint": "^9.25.1",
+    "navicommit": "^1.0.1",
     "prettier": "^3.5.3"
   }
 }
