--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "homepage": "https://github.com/O-clock-Sushi/pet-foster-connect-front#readme",
   "description": "",
   "dependencies": {
+    "argon2": "^0.43.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "pg": "^8.15.1",
     "react-router-dom": "^7.5.1",
     "sequelize": "^6.37.7"
