--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "description": "",
   "dependencies": {
     "argon2": "^0.43.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-xss-sanitizer": "^2.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.15.1",
