--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "pg": "^8.15.1",
     "react-router-dom": "^7.5.1",
     "sequelize": "^6.37.7"
