fix: Update a user: added a specific validation scheme to allow not to fill in the password if it has not changed

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node --env-file=.env index.js",
+    "build": "npm run build --prefix pet-foster-connect",
     "commit": "navi commit",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node index.js",
