--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,16 @@
-{ 
-  "version": 2, 
-  "builds": 
-  [{ 
-    "src": "index.js", 
-    "use": "@vercel/node" 
-  }],
-  "routes": 
-  [{ 
-    "src": "/api/(.*)", 
-    "dest": "/index.js" 
-  }],
-  "rewrites": 
-  [{ 
-    "source": "/(.*)", 
-    "destination": "/api" 
-  }]
+{
+  "buildCommand": "cd backend && npm install && npm run build",
+  "outputDirectory": "backend/dist",
+  "devCommand": "cd backend && npm run dev",
+  "installCommand": "cd backend && npm install",
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/backend/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/backend/$1"
+    }
+  ]
 }
