--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "pet-foster-connect",
+  "name": "pet-foster",
   "version": "1.0.0",
-  "description": "Site de mise en relation entre des personnes qui souhaitent faire garder leur animal de compagnie et des personnes qui souhaitent garder un animal de compagnie.",
-  "directories": {
-    "doc": "docs"
-  },
+  "private": true,
   "scripts": {
-    "install": "npm install --prefix back && npm install --prefix front",
-    "dev:back": "npm run dev --prefix back",
-    "dev:front": "npm run dev --prefix front"
-  },
-  "keywords": ["pet", "animal", "garde", "foster"],
-  "author": "amel.m20@gmail.com",
-  "license": "ISC"
+    "build": "cd backend && npm run build",
+    "dev": "cd backend && npm run dev",
+    "start": "cd backend && npm start"
+  }
 }
