--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "pet-foster",
   "version": "1.0.0",
   "private": true,
+  "workspaces": [
+    "backend",
+    "frontend"
+  ],
   "scripts": {
-    "build": "cd backend && npm run build",
-    "dev": "cd backend && npm run dev",
+    "build": "cd backend && npm install && npm run build",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && npm run dev",
     "start": "cd backend && npm start"
   }
 }
