--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,10 @@
     "db:reset": "npm run db:create && npm run db:seed",
     "db:testDB": "node --env-file=.env src/migrations/testTable.js"
   },
-  "dependencies": {
+   "dependencies": {
     "argon2": "^0.43.0",
     "bootstrap": "^5.3.5",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
