--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,6 @@ PORT=3000
 
 PG_URL=postgres://user:mdp@localhost:5432/bdd
 
-VITE_API_BASE_URL=http://localhost:3000/api
+ALLOWED_DOMAINS=
 
-JWT_SECRET=ta-phrase-secrete
+JWT_SECRET=mettez-une-phrase-secrete
