--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "backend",
     "frontend"
   ],
-  "scripts": {
-    "build": "cd backend && npm install && npm run build",
-    "dev:backend": "cd backend && npm run dev",
-    "dev:frontend": "cd frontend && npm run dev",
-    "start": "cd backend && npm start"
+ "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@vercel/related-projects": "^1.0.0"
