--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://petfoster.amelmhdi-server.eddi.cloud/api
+VITE_API_BASE_URL=https://deal-symphony-donor-boats.trycloudflare.com
