--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,10 @@
   "type": "module",
   "main": "api/index.js",
   "scripts": {
-    "start": "node --env-file=.env api/index.js",
-    "build": "mkdir -p api && cp -r src api/ && cp index.js api/server.js && echo 'Build completed'",
-    "commit": "navi commit",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "dev": "node index.js",
+    "commit": "navi commit",
+    "test": "echo \"No tests\" && exit 0",
     "db:create": "node --env-file=.env src/migrations/createTables.js",
     "db:seed": "node --env-file=.env src/migrations/seedDatabase.js",
     "db:reset": "npm run db:create && npm run db:seed",
