--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=VITE_API_BASE_URL=https://pet-foster-0cvx.onrender.com/api
+VITE_API_BASE_URL=https://pet-foster-0cvx.onrender.com/api
