update: env variables for render

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,9 @@
-PORT=3000
-
-PG_URL=postgres://user:mdp@localhost:5432/bdd
+PORT=
 
 ALLOWED_DOMAINS=
 
-JWT_SECRET=mettez-une-phrase-secrete
+DATABASE_URL=
+
+PG_URL=
+
+JWT_SECRET=jwt_secret
